[tool.poetry]
name = "hp-report-portal"
version = "0.1.0"
homepage = "https://github.com/dunossauro/report-portal-hook-plugin/"
description = "behave report portal hook plugin"
authors = [
  "dunossauro <mendesxeduardo@gmail.com>",
  "reebr <renan.gomes@live.com>"
]
license = "MIT"
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.5"
hook-plug = "^0.0.1"
reportportal-client = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
